--- a/Mongo.Web/Views/Coupon/CouponCreate.cshtml
+++ b/Mongo.Web/Views/Coupon/CouponCreate.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Mango.Web.Models
 @model CouponDto
 
-<form>
+<form asp-action="CouponCreate">
     <br />
     <div class="container border p-3">
         <h1 class="text-white text-center">Create Coupon</h1>
