--- a/Mongo.Web/Views/Home/ProductDetails.cshtml
+++ b/Mongo.Web/Views/Home/ProductDetails.cshtml
@@ -27,7 +27,7 @@
                                 </div>
                             </div>
                             <div class="row mx-0">
-                                <input class="form-control" />
+                                <input asp-for="Count" class="form-control" />
                             </div>
                         </div>
                     </div>
@@ -45,3 +45,7 @@
     </div>
 </form>
 
+
+@section Scripts{
+    <partial name="_ValidationScriptsPartial"/>
+}
