--- a/Mongo.Web/Views/Cart/CartIndex.cshtml
+++ b/Mongo.Web/Views/Cart/CartIndex.cshtml
@@ -1,6 +1,9 @@
 ﻿@using Mango.Web.Models
 @model CartDto
 
+@if(Model.CartHeader != null && Model.CartDetails?.Count() > 0)
+{
+    
 <form method="post">
     <br />
     <input asp-for="CartHeader.UserId" hidden/>
@@ -93,4 +96,11 @@
             </div>
         </div>
     </div>
-</form>
+    </form>
+}
+else
+{
+    <div>
+        <p>Please add items to cart</p>
+    </div>
+}
